@@ -13,8 +13,10 @@ openafs (1.4.1-3) unstable; urgency=low
   * Regenerate the man pages on build since the pre-generated ones were
     done with a very old version of pod2man.
   * Update standards version to 3.7.2 (no changes required).
+  * Use a better method of optionally running make distclean.
+  * Add build-arch and build-indep targets, just in case.
 
- -- Russ Allbery <rra@debian.org>  Wed,  7 Jun 2006 12:52:06 -0700
+ -- Russ Allbery <rra@debian.org>  Wed,  7 Jun 2006 12:55:36 -0700
 
 openafs (1.4.1-2) unstable; urgency=low
 
